[package]
name = "avi-metrics-exporter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server"] }
tokio = { version = "1", features = ["full", "rt"] }
futures-util = "0.3"
serde_json = "1.0"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive"] }
clap = "2"
env_logger = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.8"
url = "2.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
